aggregate behavior data into one table

--- a/read_wb.ipynb
+++ b/read_wb.ipynb
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "source": [
     "beh_indexes = [4,6,8,10,12]\n",
     "\n",
@@ -1916,6 +1916,8 @@
     "\n",
     "behs = pd.concat(behdfs)\n",
     "behs = behs[~behs['variable'].isin(['Insert_beh'])]\n",
+    "behs['variable'] = behs['variable'].str.replace(r'_beh', '')\n",
+    "behs.reset_index(drop = True,inplace=True)\n",
     "behs"
    ],
    "outputs": [
@@ -1954,7 +1956,7 @@
        "      <td>1</td>\n",
        "      <td>7-3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Aggression_beh</td>\n",
+       "      <td>Aggression</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1962,7 +1964,7 @@
        "      <td>1</td>\n",
        "      <td>3-11</td>\n",
        "      <td>No Behaviors</td>\n",
-       "      <td>Aggression_beh</td>\n",
+       "      <td>Aggression</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1970,7 +1972,7 @@
        "      <td>1</td>\n",
        "      <td>11-7</td>\n",
        "      <td>No Behaviors</td>\n",
-       "      <td>Aggression_beh</td>\n",
+       "      <td>Aggression</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1978,7 +1980,7 @@
        "      <td>2</td>\n",
        "      <td>7-3</td>\n",
        "      <td>No Behaviors</td>\n",
-       "      <td>Aggression_beh</td>\n",
+       "      <td>Aggression</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1986,7 +1988,7 @@
        "      <td>2</td>\n",
        "      <td>3-11</td>\n",
        "      <td>No Behaviors</td>\n",
-       "      <td>Aggression_beh</td>\n",
+       "      <td>Aggression</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1998,43 +2000,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
+       "      <th>367</th>\n",
        "      <td>30</td>\n",
        "      <td>3-11</td>\n",
        "      <td>LOA</td>\n",
-       "      <td>Disruptive_beh</td>\n",
+       "      <td>Disruptive</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>368</th>\n",
        "      <td>30</td>\n",
        "      <td>11-7</td>\n",
        "      <td>LOA</td>\n",
-       "      <td>Disruptive_beh</td>\n",
+       "      <td>Disruptive</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
+       "      <th>369</th>\n",
        "      <td>31</td>\n",
        "      <td>7-3</td>\n",
        "      <td>LOA</td>\n",
-       "      <td>Disruptive_beh</td>\n",
+       "      <td>Disruptive</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
+       "      <th>370</th>\n",
        "      <td>31</td>\n",
        "      <td>3-11</td>\n",
        "      <td>LOA</td>\n",
-       "      <td>Disruptive_beh</td>\n",
+       "      <td>Disruptive</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
+       "      <th>371</th>\n",
        "      <td>31</td>\n",
        "      <td>11-7</td>\n",
        "      <td>LOA</td>\n",
-       "      <td>Disruptive_beh</td>\n",
+       "      <td>Disruptive</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2043,24 +2045,24 @@
        "</div>"
       ],
       "text/plain": [
-       "   July Shift       No Data        variable  value\n",
-       "0     1   7-3           NaN  Aggression_beh    2.0\n",
-       "1     1  3-11  No Behaviors  Aggression_beh    0.0\n",
-       "2     1  11-7  No Behaviors  Aggression_beh    0.0\n",
-       "3     2   7-3  No Behaviors  Aggression_beh    0.0\n",
-       "4     2  3-11  No Behaviors  Aggression_beh    0.0\n",
-       "..  ...   ...           ...             ...    ...\n",
-       "88   30  3-11           LOA  Disruptive_beh    NaN\n",
-       "89   30  11-7           LOA  Disruptive_beh    NaN\n",
-       "90   31   7-3           LOA  Disruptive_beh    NaN\n",
-       "91   31  3-11           LOA  Disruptive_beh    NaN\n",
-       "92   31  11-7           LOA  Disruptive_beh    NaN\n",
+       "    July Shift       No Data    variable  value\n",
+       "0      1   7-3           NaN  Aggression    2.0\n",
+       "1      1  3-11  No Behaviors  Aggression    0.0\n",
+       "2      1  11-7  No Behaviors  Aggression    0.0\n",
+       "3      2   7-3  No Behaviors  Aggression    0.0\n",
+       "4      2  3-11  No Behaviors  Aggression    0.0\n",
+       "..   ...   ...           ...         ...    ...\n",
+       "367   30  3-11           LOA  Disruptive    NaN\n",
+       "368   30  11-7           LOA  Disruptive    NaN\n",
+       "369   31   7-3           LOA  Disruptive    NaN\n",
+       "370   31  3-11           LOA  Disruptive    NaN\n",
+       "371   31  11-7           LOA  Disruptive    NaN\n",
        "\n",
        "[372 rows x 5 columns]"
       ]
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 44
     }
    ],
    "metadata": {}
