--- a/read_wb.ipynb
+++ b/read_wb.ipynb
@@ -8,9 +8,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "#set dataframe display options \n",
     "pd.options.display.max_columns = 200\n",
     "pd.options.display.max_rows = 200\n",
     "\n",
+    "#read in necessary sheets \n",
     "df = pd.read_excel('/Users/canderson/Documents/Python/Behavior-Psychology-Visualization-Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = 'Aug', skiprows=[1,2])\n",
     "dfyr = pd.read_excel('/Users/canderson/Documents/Python/Behavior-Psychology-Visualization-Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = 'YiVis')\n",
     "\n",
@@ -1760,6 +1762,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "source": [
+    "#get years variable \n",
     "year = dfyr.iloc[3,1]\n",
     "year1, year2 = str.split(year, '-')\n",
     "print(year)\n",
@@ -1783,6 +1786,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "source": [
+    "#select necessary columns and front fill NaNs in month column \n",
     "dfbeh = df.iloc[:, [0,1,2,4,7,22,25,40,43,58,61,76,79]]\n",
     "dfbeh = dfbeh.rename(columns = {'Unnamed: 1':'Shift','Unnamed: 2':'No Data','Unnamed: 7':dfbeh.columns[3]+'_beh','Unnamed: 25':dfbeh.columns[5]+'_beh',\n",
     "                                'Unnamed: 43':dfbeh.columns[7]+'_beh','Unnamed: 61':dfbeh.columns[9]+'_beh','Unnamed: 79':dfbeh.columns[11]+'_beh'})\n",
@@ -1960,6 +1964,7 @@
    "cell_type": "code",
    "execution_count": 26,
    "source": [
+    "#create 'month number' variable \n",
     "month_name = dfbeh.columns[0]\n",
     "datetime_object = datetime.datetime.strptime(month_name, \"%B\")\n",
     "month_num = datetime_object.month\n",
@@ -1980,6 +1985,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "source": [
+    "#if month number is between 7 and 12 year1 is selected, else year2 \n",
     "if 7 <= month_num <= 12:\n",
     "    year_num = year1\n",
     "else:\n",
@@ -2001,6 +2007,7 @@
    "cell_type": "code",
    "execution_count": 28,
    "source": [
+    "#create date string \n",
     "date = str(year_num) + '-' + str(month_num)\n",
     "date"
    ],
@@ -2022,19 +2029,27 @@
    "cell_type": "code",
    "execution_count": 30,
    "source": [
+    "#create list of colum indexes for behavior data \n",
     "beh_indexes = [4,6,8,10,12]\n",
     "\n",
+    "#loop through behavior indexes and create dataframes for each behavior \n",
     "behdfs = []\n",
     "for i, bidx in enumerate(beh_indexes):\n",
+    "    #create new var for each df \n",
     "    beh_id = f\"beh{i+1}\" \n",
+    "    #create long format df for behavior and drop unnecessary rows \n",
     "    beh_id = pd.melt(dfbeh, id_vars = [dfbeh.columns[0],dfbeh.columns[1],dfbeh.columns[2]],value_vars =[dfbeh.columns[bidx]])\n",
     "    beh_id = beh_id.drop(beh_id.index[np.where(beh_id.index >= 93)])\n",
+    "    #add dfs to list \n",
     "    behdfs.append(beh_id)\n",
     "\n",
+    "#cocatanate into one lare dataframe, drop unnecessary rows \n",
     "behs = pd.concat(behdfs)\n",
     "behs = behs[~behs['variable'].isin(['Insert_beh'])]\n",
+    "#tidy up variable names and reset index\n",
     "behs['variable'] = behs['variable'].str.replace(r'_beh', '')\n",
     "behs.reset_index(drop = True,inplace=True)\n",
+    "#create date column and convery to padas datetime\n",
     "behs['Date'] = date + '-' + behs.iloc[:,0].astype(str)\n",
     "behs['Date'] = pd.to_datetime(behs['Date'])\n",
     "behs.head(100)"
