--- a/read_wb.ipynb
+++ b/read_wb.ipynb
@@ -3,17 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "source": [
+    "import datetime\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "#set dataframe display options \n",
+    "pd.options.display.max_columns = 200\n",
+    "pd.options.display.max_rows = 200\n",
+    "\n",
+    "#read in necessary sheets \n",
+    "df = pd.read_excel('/Users/canderson/Documents/Python/Behavior-Psychology-Visualization-Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = 'Aug', skiprows=[1,2])\n",
+    "dfyr = pd.read_excel('/Users/canderson/Documents/Python/Behavior-Psychology-Visualization-Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = 'YiVis')\n",
+    "\n",
+    "df.head(10)"
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
       "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
       "  for idx, row in parser.parse():\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1659,33 +1674,21 @@
        "9           NaN         20.0     NaN     NaN  "
       ]
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 22
     }
    ],
-   "source": [
-    "import datetime\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "#set dataframe display options \n",
-    "pd.options.display.max_columns = 200\n",
-    "pd.options.display.max_rows = 200\n",
-    "\n",
-    "#read in necessary sheets \n",
-    "df = pd.read_excel('/Users/canderson/Documents/Python/Behavior-Psychology-Visualization-Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = 'Aug', skiprows=[1,2])\n",
-    "dfyr = pd.read_excel('/Users/canderson/Documents/Python/Behavior-Psychology-Visualization-Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = 'YiVis')\n",
-    "\n",
-    "df.head(10)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "source": [
+    "dfyr.head()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1749,30 +1752,15 @@
        "4                                  NaN                    NaN"
       ]
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 23
     }
    ],
-   "source": [
-    "dfyr.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-2023\n",
-      "2022\n",
-      "2023\n"
-     ]
-    }
-   ],
    "source": [
     "#get years variable \n",
     "year = dfyr.iloc[3,1]\n",
@@ -1780,21 +1768,42 @@
     "print(year)\n",
     "print(year1)\n",
     "print(year2)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2022-2023\n",
+      "2022\n",
+      "2023\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "source": [
+    "#select necessary columns and front fill NaNs in month column \n",
+    "dfbeh = df.iloc[:, [0,1,2,4,7,22,25,40,43,58,61,76,79]]\n",
+    "dfbeh = dfbeh.rename(columns = {'Unnamed: 1':'Shift','Unnamed: 2':'No Data','Unnamed: 7':dfbeh.columns[3]+'_beh','Unnamed: 25':dfbeh.columns[5]+'_beh',\n",
+    "                                'Unnamed: 43':dfbeh.columns[7]+'_beh','Unnamed: 61':dfbeh.columns[9]+'_beh','Unnamed: 79':dfbeh.columns[11]+'_beh'})\n",
+    "dfbeh.iloc[:,0] = dfbeh.iloc[:,0].fillna(method='ffill')\n",
+    "print(dfbeh.shape)\n",
+    "dfbeh.head()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "(104, 13)\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1945,55 +1954,36 @@
        "4             0.0    NaN         NaN  "
       ]
      },
-     "execution_count": 25,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 25
     }
    ],
-   "source": [
-    "#select necessary columns and front fill NaNs in month column \n",
-    "dfbeh = df.iloc[:, [0,1,2,4,7,22,25,40,43,58,61,76,79]]\n",
-    "dfbeh = dfbeh.rename(columns = {'Unnamed: 1':'Shift','Unnamed: 2':'No Data','Unnamed: 7':dfbeh.columns[3]+'_beh','Unnamed: 25':dfbeh.columns[5]+'_beh',\n",
-    "                                'Unnamed: 43':dfbeh.columns[7]+'_beh','Unnamed: 61':dfbeh.columns[9]+'_beh','Unnamed: 79':dfbeh.columns[11]+'_beh'})\n",
-    "dfbeh.iloc[:,0] = dfbeh.iloc[:,0].fillna(method='ffill')\n",
-    "print(dfbeh.shape)\n",
-    "dfbeh.head()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
-    }
-   ],
    "source": [
     "#create 'month number' variable \n",
     "month_name = dfbeh.columns[0]\n",
     "datetime_object = datetime.datetime.strptime(month_name, \"%B\")\n",
     "month_num = datetime_object.month\n",
     "print(month_num)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022\n"
-     ]
-    }
-   ],
    "source": [
     "#if month number is between 7 and 12 year1 is selected, else year2 \n",
     "if 7 <= month_num <= 12:\n",
@@ -2001,36 +1991,72 @@
     "else:\n",
     "    year_num = year2\n",
     "print(year_num)"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2022\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "source": [
+    "#create date string \n",
+    "date = str(year_num) + '-' + str(month_num)\n",
+    "date"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'2022-8'"
       ]
      },
-     "execution_count": 28,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 28
     }
    ],
-   "source": [
-    "#create date string \n",
-    "date = str(year_num) + '-' + str(month_num)\n",
-    "date"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "source": [
+    "#create list of colum indexes for behavior data \n",
+    "beh_indexes = [4,6,8,10,12]\n",
+    "\n",
+    "#loop through behavior indexes and create dataframes for each behavior \n",
+    "behdfs = []\n",
+    "for i, bidx in enumerate(beh_indexes):\n",
+    "    #create new var for each df \n",
+    "    beh_id = f\"beh{i+1}\" \n",
+    "    #create long format df for behavior and drop unnecessary rows \n",
+    "    beh_id = pd.melt(dfbeh, id_vars = [dfbeh.columns[0],dfbeh.columns[1],dfbeh.columns[2]],value_vars =[dfbeh.columns[bidx]])\n",
+    "    beh_id = beh_id.drop(beh_id.index[np.where(beh_id.index >= 93)])\n",
+    "    #add dfs to list \n",
+    "    behdfs.append(beh_id)\n",
+    "\n",
+    "#cocatanate into one lare dataframe, drop unnecessary rows \n",
+    "behs = pd.concat(behdfs)\n",
+    "behs = behs[~behs['variable'].isin(['Insert_beh'])]\n",
+    "#tidy up variable names and reset index\n",
+    "behs['variable'] = behs['variable'].str.replace(r'_beh', '')\n",
+    "behs.reset_index(drop = True,inplace=True)\n",
+    "#create date column and convery to padas datetime\n",
+    "behs['Date'] = date + '-' + behs.iloc[:,0].astype(str)\n",
+    "behs['Date'] = pd.to_datetime(behs['Date'])\n",
+    "behs.head(100)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -3068,144 +3094,15 @@
        "99      3   7-3  No Data Recorded  Self Mutilation    NaN 2022-08-03"
       ]
      },
-     "execution_count": 30,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 30
     }
    ],
-   "source": [
-    "#create list of colum indexes for behavior data \n",
-    "beh_indexes = [4,6,8,10,12]\n",
-    "\n",
-    "#loop through behavior indexes and create dataframes for each behavior \n",
-    "behdfs = []\n",
-    "for i, bidx in enumerate(beh_indexes):\n",
-    "    #create new var for each df \n",
-    "    beh_id = f\"beh{i+1}\" \n",
-    "    #create long format df for behavior and drop unnecessary rows \n",
-    "    beh_id = pd.melt(dfbeh, id_vars = [dfbeh.columns[0],dfbeh.columns[1],dfbeh.columns[2]],value_vars =[dfbeh.columns[bidx]])\n",
-    "    beh_id = beh_id.drop(beh_id.index[np.where(beh_id.index >= 93)])\n",
-    "    #add dfs to list \n",
-    "    behdfs.append(beh_id)\n",
-    "\n",
-    "#cocatanate into one lare dataframe, drop unnecessary rows \n",
-    "behs = pd.concat(behdfs)\n",
-    "behs = behs[~behs['variable'].isin(['Insert_beh'])]\n",
-    "#tidy up variable names and reset index\n",
-    "behs['variable'] = behs['variable'].str.replace(r'_beh', '')\n",
-    "behs.reset_index(drop = True,inplace=True)\n",
-    "#create date column and convery to padas datetime\n",
-    "behs['Date'] = date + '-' + behs.iloc[:,0].astype(str)\n",
-    "behs['Date'] = pd.to_datetime(behs['Date'])\n",
-    "behs.head(100)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yn/opt/anaconda3/lib/python3.9/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>August</th>\n",
-       "      <th>Shift</th>\n",
-       "      <th>No Data</th>\n",
-       "      <th>variable</th>\n",
-       "      <th>value</th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>7-3</td>\n",
-       "      <td>LOA</td>\n",
-       "      <td>Aggression</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-08-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3-11</td>\n",
-       "      <td>LOA</td>\n",
-       "      <td>Aggression</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-08-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>11-7</td>\n",
-       "      <td>No Data Recorded</td>\n",
-       "      <td>Aggression</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-08-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>7-3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Aggression</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2022-08-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3-11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Aggression</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2022-08-02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  August Shift           No Data    variable  value       Date\n",
-       "0      1   7-3               LOA  Aggression    NaN 2022-08-01\n",
-       "1      1  3-11               LOA  Aggression    NaN 2022-08-01\n",
-       "2      1  11-7  No Data Recorded  Aggression    NaN 2022-08-01\n",
-       "3      2   7-3               NaN  Aggression    2.0 2022-08-02\n",
-       "4      2  3-11               NaN  Aggression    1.0 2022-08-02"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 36,
    "source": [
     "#define a function encapsulting above code so that we can get data for one month\n",
     "def get_month_dataframe(month_string):\n",
@@ -3214,8 +3111,8 @@
     "    pd.options.display.max_rows = 200\n",
     "\n",
     "    #read in necessary sheets \n",
-    "    df = pd.read_excel('/Users/yn/Documents/tcfd/visualization tool/Behavior Psychology Visualization Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = month_string, skiprows=[1,2])\n",
-    "    dfyr = pd.read_excel('/Users/yn/Documents/tcfd/visualization tool/Behavior Psychology Visualization Tool/data/DP Beh Data 2022-23.xlsm', sheet_name = 'YiVis')\n",
+    "    df = pd.read_excel('data/DP Beh Data 2022-23.xlsm', sheet_name = month_string, skiprows=[1,2])\n",
+    "    dfyr = pd.read_excel('data/DP Beh Data 2022-23.xlsm', sheet_name = 'YiVis')\n",
     "\n",
     "    #get years variable \n",
     "    year = dfyr.iloc[3,1]\n",
@@ -3265,15 +3162,119 @@
     "    behs['Date'] = date + '-' + behs.iloc[:,0].astype(str)\n",
     "    behs['Date'] = pd.to_datetime(behs['Date'])\n",
     "    return behs\n",
-    "get_month_dataframe('Aug').head()"
-   ]
+    "\n",
+    "get_month_dataframe('July').head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
+      "  for idx, row in parser.parse():\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>July</th>\n",
+       "      <th>Shift</th>\n",
+       "      <th>No Data</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7-3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Aggression</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2022-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3-11</td>\n",
+       "      <td>No Behaviors</td>\n",
+       "      <td>Aggression</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>11-7</td>\n",
+       "      <td>No Behaviors</td>\n",
+       "      <td>Aggression</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-07-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7-3</td>\n",
+       "      <td>No Behaviors</td>\n",
+       "      <td>Aggression</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-07-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3-11</td>\n",
+       "      <td>No Behaviors</td>\n",
+       "      <td>Aggression</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2022-07-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  July Shift       No Data    variable  value       Date\n",
+       "0    1   7-3           NaN  Aggression    2.0 2022-07-01\n",
+       "1    1  3-11  No Behaviors  Aggression    0.0 2022-07-01\n",
+       "2    1  11-7  No Behaviors  Aggression    0.0 2022-07-01\n",
+       "3    2   7-3  No Behaviors  Aggression    0.0 2022-07-02\n",
+       "4    2  3-11  No Behaviors  Aggression    0.0 2022-07-02"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
