--- a/read_wb.ipynb
+++ b/read_wb.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 92,
    "source": [
     "import datetime\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import warnings\n",
+    "\n",
+    "warnings.simplefilter(action='ignore', category=UserWarning)\n",
     "\n",
     "#set dataframe display options \n",
     "pd.options.display.max_columns = 200\n",
@@ -19,14 +22,6 @@
     "df.head(10)"
    ],
    "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n"
-     ]
-    },
     {
      "output_type": "execute_result",
      "data": {
@@ -1651,14 +1646,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 79
+     "execution_count": 92
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 93,
    "source": [
     "dfyr.head()"
    ],
@@ -1729,14 +1724,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 80
+     "execution_count": 93
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 94,
    "source": [
     "#get years variable \n",
     "year = dfyr.iloc[3,1]\n",
@@ -1760,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 95,
    "source": [
     "#select necessary columns and front fill NaNs in month column \n",
     "dfbeh = df.iloc[:, [0,1,2,4,7,22,25,40,43,58,61,76,79]]\n",
@@ -1924,14 +1919,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 95
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 96,
    "source": [
     "#create 'month number' variable \n",
     "month_name = dfbeh.columns[0]\n",
@@ -1952,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 97,
    "source": [
     "#if month number is between 7 and 12 year1 is selected, else year2 \n",
     "if 7 <= month_num <= 12:\n",
@@ -1974,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "source": [
     "#create date string \n",
     "date = str(year_num) + '-' + str(month_num)\n",
@@ -1989,14 +1984,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 85
+     "execution_count": 98
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "source": [
     "#create list of colum indexes for behavior data \n",
     "beh_indexes = [4,6,8,10,12]\n",
@@ -2128,14 +2123,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 89
+     "execution_count": 99
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "source": [
     "#define a function encapsulting above code so that we can get data for one month\n",
     "def get_month_dataframe(workbook_xl, month):\n",
@@ -2221,45 +2216,9 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n",
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n"
-     ]
-    },
-    {
-     "output_type": "stream",
      "name": "stdout",
      "text": [
       "(4380, 5)\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/Users/canderson/opt/anaconda3/lib/python3.8/site-packages/openpyxl/worksheet/_read_only.py:79: UserWarning: Data Validation extension is not supported and will be removed\n",
-      "  for idx, row in parser.parse():\n"
      ]
     },
     {
@@ -2346,7 +2305,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 91
+     "execution_count": 100
     }
    ],
    "metadata": {}
