--- a/read_wb.ipynb
+++ b/read_wb.ipynb
@@ -2,7 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
+   "source": [
+    "df = pd.DataFrame({'name':['jim','jim','jim','jim','jim'],\n",
+    "               'number':['1','1','.','1','1']})\n",
+    "\n",
+    "df['number'] = df['number'].str.replace(r'\\D', '')\n",
+    "\n",
+    "df"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/var/folders/bg/jv0b8cmn4hq1x2msdj1mflq9dy7c1d/T/ipykernel_56548/2950407599.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  df['number'] = df['number'].str.replace(r'\\D', '')\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>jim</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>jim</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>jim</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>jim</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>jim</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  name number\n",
+       "0  jim      1\n",
+       "1  jim      1\n",
+       "2  jim       \n",
+       "3  jim      1\n",
+       "4  jim      1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "source": [
     "import datetime\n",
     "import numpy as np\n",
@@ -1646,7 +1737,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 92
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -2323,8 +2414,8 @@
    "hash": "e188947629b0524f73a85c49c67ddb7540fac48e30b4974dd00b7c68849163ff"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
