--- a/read_wb.ipynb
+++ b/read_wb.ipynb
@@ -2766,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2790,179 +2790,208 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Lithium</th>\n",
+       "      <th>Dose</th>\n",
+       "      <th>unit/xDay     (mg ml etc)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1200</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1050</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>900</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>750</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>600</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>Place a * to indicate medications tracked but ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>** All dates will indicate the date of med adm...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              Lithium\n",
-       "1                                                1200\n",
-       "2                                                1050\n",
-       "3                                                 900\n",
-       "4                                                 750\n",
-       "5                                                 600\n",
-       "6                                                 NaN\n",
-       "7                                                 NaN\n",
-       "8                                                 NaN\n",
-       "9                                                 NaN\n",
-       "10                                                NaN\n",
-       "11                                                NaN\n",
-       "12                                                NaN\n",
-       "13                                                NaN\n",
-       "14                                                NaN\n",
-       "15                                                NaN\n",
-       "16                                                NaN\n",
-       "17                                                NaN\n",
-       "18                                                NaN\n",
-       "19                                                NaN\n",
-       "20                                                NaN\n",
-       "21                                                NaN\n",
-       "22                                                NaN\n",
-       "23                                                NaN\n",
-       "24                                                NaN\n",
-       "25                                                NaN\n",
-       "26                                                NaN\n",
-       "27                                                NaN\n",
-       "28                                                NaN\n",
-       "29  Place a * to indicate medications tracked but ...\n",
-       "30  ** All dates will indicate the date of med adm..."
+       "   Dose unit/xDay     (mg ml etc)\n",
+       "1   NaN                       NaN\n",
+       "2   NaN                       NaN\n",
+       "3   NaN                       NaN\n",
+       "4   NaN                       NaN\n",
+       "5   NaN                       NaN\n",
+       "6   NaN                       NaN\n",
+       "7   NaN                       NaN\n",
+       "8   NaN                       NaN\n",
+       "9   NaN                       NaN\n",
+       "10  NaN                       NaN\n",
+       "11  NaN                       NaN\n",
+       "12  NaN                       NaN\n",
+       "13  NaN                       NaN\n",
+       "14  NaN                       NaN\n",
+       "15  NaN                       NaN\n",
+       "16  NaN                       NaN\n",
+       "17  NaN                       NaN\n",
+       "18  NaN                       NaN\n",
+       "19  NaN                       NaN\n",
+       "20  NaN                       NaN\n",
+       "21  NaN                       NaN\n",
+       "22  NaN                       NaN\n",
+       "23  NaN                       NaN\n",
+       "24  NaN                       NaN\n",
+       "25  NaN                       NaN\n",
+       "26  NaN                       NaN\n",
+       "27  NaN                       NaN\n",
+       "28  NaN                       NaN\n",
+       "29  NaN                       NaN"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "workbook_xl = pd.ExcelFile(\"/Users/yn/Documents/tcfd/visualization tool/Behavior Psychology Visualization Tool/data/DP Beh Data 2021-22.xlsm\")\n",
-    "df_meds = pd.read_excel(workbook_xl, sheet_name=\"MEDICATIONS\", skiprows=[0, 3])\n",
-    "med_name = df_meds.columns[0]\n",
+    "df_meds = pd.read_excel(workbook_xl, sheet_name=\"MEDICATIONS\", skiprows=[0, 1, 3])\n",
+    "df_meds_id = pd.read_excel(workbook_xl, sheet_name=\"MEDICATIONS\", skiprows=[0, 3])\n",
+    "med_name = df_meds_id.columns[0]\n",
     "df_meds = df_meds.drop(index=0)\n",
-    "pd.DataFrame(df_meds.iloc[:,0])\n"
+    "dose = pd.DataFrame(df_meds.iloc[:,0])\n",
+    "units = pd.DataFrame(df_meds.iloc[:,1])\n",
+    "df_dose =  dose + units\n",
+    "df_dose\n"
    ]
   },
   {
