medication start date read in

--- a/read_wb.ipynb
+++ b/read_wb.ipynb
@@ -2403,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2748,7 +2748,7 @@
        "[10 rows x 90 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2766,7 +2766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2792,206 +2792,336 @@
        "      <th></th>\n",
        "      <th>Dose</th>\n",
        "      <th>unit/xDay     (mg ml etc)</th>\n",
+       "      <th>Medication</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>mg</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>mg</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>900</td>\n",
+       "      <td>mg</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>750</td>\n",
+       "      <td>mg</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>600</td>\n",
+       "      <td>mg</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
+       "      <td>Place a * to indicate medications tracked but ...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>** All dates will indicate the date of med adm...</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Lithium</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Dose unit/xDay     (mg ml etc)\n",
-       "1   NaN                       NaN\n",
-       "2   NaN                       NaN\n",
-       "3   NaN                       NaN\n",
-       "4   NaN                       NaN\n",
-       "5   NaN                       NaN\n",
-       "6   NaN                       NaN\n",
-       "7   NaN                       NaN\n",
-       "8   NaN                       NaN\n",
-       "9   NaN                       NaN\n",
-       "10  NaN                       NaN\n",
-       "11  NaN                       NaN\n",
-       "12  NaN                       NaN\n",
-       "13  NaN                       NaN\n",
-       "14  NaN                       NaN\n",
-       "15  NaN                       NaN\n",
-       "16  NaN                       NaN\n",
-       "17  NaN                       NaN\n",
-       "18  NaN                       NaN\n",
-       "19  NaN                       NaN\n",
-       "20  NaN                       NaN\n",
-       "21  NaN                       NaN\n",
-       "22  NaN                       NaN\n",
-       "23  NaN                       NaN\n",
-       "24  NaN                       NaN\n",
-       "25  NaN                       NaN\n",
-       "26  NaN                       NaN\n",
-       "27  NaN                       NaN\n",
-       "28  NaN                       NaN\n",
-       "29  NaN                       NaN"
+       "                                                 Dose  \\\n",
+       "1                                                1200   \n",
+       "2                                                1050   \n",
+       "3                                                 900   \n",
+       "4                                                 750   \n",
+       "5                                                 600   \n",
+       "6                                                 NaN   \n",
+       "7                                                 NaN   \n",
+       "8                                                 NaN   \n",
+       "9                                                 NaN   \n",
+       "10                                                NaN   \n",
+       "11                                                NaN   \n",
+       "12                                                NaN   \n",
+       "13                                                NaN   \n",
+       "14                                                NaN   \n",
+       "15                                                NaN   \n",
+       "16                                                NaN   \n",
+       "17                                                NaN   \n",
+       "18                                                NaN   \n",
+       "19                                                NaN   \n",
+       "20                                                NaN   \n",
+       "21                                                NaN   \n",
+       "22                                                NaN   \n",
+       "23                                                NaN   \n",
+       "24                                                NaN   \n",
+       "25                                                NaN   \n",
+       "26                                                NaN   \n",
+       "27                                                NaN   \n",
+       "28                                                NaN   \n",
+       "29  Place a * to indicate medications tracked but ...   \n",
+       "30  ** All dates will indicate the date of med adm...   \n",
+       "\n",
+       "   unit/xDay     (mg ml etc) Medication  \n",
+       "1                         mg    Lithium  \n",
+       "2                         mg    Lithium  \n",
+       "3                         mg    Lithium  \n",
+       "4                         mg    Lithium  \n",
+       "5                         mg    Lithium  \n",
+       "6                        NaN    Lithium  \n",
+       "7                        NaN    Lithium  \n",
+       "8                        NaN    Lithium  \n",
+       "9                        NaN    Lithium  \n",
+       "10                       NaN    Lithium  \n",
+       "11                       NaN    Lithium  \n",
+       "12                       NaN    Lithium  \n",
+       "13                       NaN    Lithium  \n",
+       "14                       NaN    Lithium  \n",
+       "15                       NaN    Lithium  \n",
+       "16                       NaN    Lithium  \n",
+       "17                       NaN    Lithium  \n",
+       "18                       NaN    Lithium  \n",
+       "19                       NaN    Lithium  \n",
+       "20                       NaN    Lithium  \n",
+       "21                       NaN    Lithium  \n",
+       "22                       NaN    Lithium  \n",
+       "23                       NaN    Lithium  \n",
+       "24                       NaN    Lithium  \n",
+       "25                       NaN    Lithium  \n",
+       "26                       NaN    Lithium  \n",
+       "27                       NaN    Lithium  \n",
+       "28                       NaN    Lithium  \n",
+       "29                       NaN    Lithium  \n",
+       "30                       NaN    Lithium  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "workbook_xl = pd.ExcelFile(\"/Users/yn/Documents/tcfd/visualization tool/Behavior Psychology Visualization Tool/data/DP Beh Data 2021-22.xlsm\")\n",
-    "df_meds = pd.read_excel(workbook_xl, sheet_name=\"MEDICATIONS\", skiprows=[0, 1, 3])\n",
+    "df_meds = pd.read_excel(workbook_xl, sheet_name=\"MEDICATIONS\", skiprows=[0, 1])\n",
     "df_meds_id = pd.read_excel(workbook_xl, sheet_name=\"MEDICATIONS\", skiprows=[0, 3])\n",
     "med_name = df_meds_id.columns[0]\n",
     "df_meds = df_meds.drop(index=0)\n",
     "dose = pd.DataFrame(df_meds.iloc[:,0])\n",
     "units = pd.DataFrame(df_meds.iloc[:,1])\n",
-    "df_dose =  dose + units\n",
+    "dose_frames =  [dose, units]\n",
+    "df_dose = pd.concat(dose_frames, axis=1)\n",
+    "df_dose[\"Medication\"] = med_name\n",
     "df_dose\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    2021-07-01\n",
+       "2    2022-03-05\n",
+       "3    2022-03-17\n",
+       "4    2022-04-20\n",
+       "5    2022-06-08\n",
+       "6           NaT\n",
+       "7           NaT\n",
+       "8           NaT\n",
+       "9           NaT\n",
+       "10          NaT\n",
+       "11          NaT\n",
+       "12          NaT\n",
+       "13          NaT\n",
+       "14          NaT\n",
+       "15          NaT\n",
+       "16          NaT\n",
+       "17          NaT\n",
+       "18          NaT\n",
+       "19          NaT\n",
+       "20          NaT\n",
+       "21          NaT\n",
+       "22          NaT\n",
+       "23          NaT\n",
+       "24          NaT\n",
+       "25          NaT\n",
+       "26          NaT\n",
+       "27          NaT\n",
+       "28          NaT\n",
+       "29          NaT\n",
+       "30          NaT\n",
+       "dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_month_df = pd.DataFrame(df_meds.iloc[:,2])\n",
+    "start_month_df = start_month_df.rename(columns={\"START DATE\" : \"Month\"})\n",
+    "start_day_df = pd.DataFrame(df_meds.iloc[:,3])\n",
+    "start_day_df = start_day_df.rename(columns={\"Unnamed: 3\" : \"Day\"})\n",
+    "start_year_df = pd.DataFrame(df_meds.iloc[:,4])\n",
+    "start_year_df = start_year_df.rename(columns={\"Unnamed: 4\" : \"Year\"})\n",
+    "start_date_frames = [start_month_df, start_day_df, start_year_df]\n",
+    "df_start_date = pd.concat(start_date_frames, axis=1)\n",
+    "df_start_date = pd.to_datetime(df_start_date)\n",
+    "df_start_date"
    ]
   },
   {
