updated to display initial duration and intensity data

--- a/test_code.ipynb
+++ b/test_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 15,
    "source": [
     "import datetime\n",
     "import numpy as np\n",
@@ -947,14 +947,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 376
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 16,
    "source": [
     "dfcolnmes.head()"
    ],
@@ -1882,14 +1882,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 377
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 17,
    "source": [
     "#clean up column names \n",
     "df.columns = df.columns.str.replace('.1','')\n",
@@ -1951,8 +1951,8 @@
     "    \n",
     "    dfdurinlist.append(dfiter)\n",
     "\n",
-    "print(dfdurin.shape)\n",
     "dfdurin = pd.concat(dfdurinlist)\n",
+    "print(dfdurin.shape)\n",
     "pd.DataFrame(dfdurinlist[0].head())\n",
     "dfdurin.head(100)"
    ],
@@ -1962,7 +1962,7 @@
      "name": "stdout",
      "text": [
       "2022-10\n",
-      "(465, 15)\n"
+      "(465, 17)\n"
      ]
     },
     {
@@ -4422,14 +4422,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 378
+     "execution_count": 17
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 18,
    "source": [
     "dfdurin.drop(columns=[dfdurin.columns[4],dfdurin.columns[5]], inplace=True)\n",
     "durin_m = pd.melt(dfdurin, id_vars = [dfdurin.columns[0],dfdurin.columns[1],dfdurin.columns[2],dfdurin.columns[3]])\n",
@@ -4783,14 +4783,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 379
+     "execution_count": 18
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 19,
    "source": [
     "fig = px.bar(durin_m[~durin_m['variable'].str.contains('Interval')],x = 'Target', y='value', color = 'variable',\n",
     "             color_discrete_sequence= px.colors.sequential.Reds, category_orders={\"variable\": [\"Duration: 0\", \"Duration: <5\", \"Sat\", \"Duration: 6-10\",\n",
@@ -5858,7 +5858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 20,
    "source": [
     "fig = px.bar(durin_m[~durin_m['variable'].str.contains('Duration')],x = 'Target', y='value', color = 'variable',\n",
     "             color_discrete_sequence= px.colors.sequential.Greens, category_orders={\"variable\": [\"Interval: 0\", \"Interval: 1\", \"Interval: 2\",\n",
@@ -6894,7 +6894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 21,
    "source": [
     "fig = px.bar(durin_m[~durin_m['variable'].str.contains('Interval')],x = 'Target', y='value', color = 'variable',\n",
     "             color_discrete_sequence= px.colors.sequential.Reds, category_orders={\"variable\": [\"Duration: 0\", \"Duration: <5\", \"Sat\", \"Duration: 6-10\",\n",
@@ -7961,7 +7961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 22,
    "source": [
     "# dfdurin1 = df.iloc[:,[0,1,2] + list(range(8,21))]\n",
     "# dfdurin1.insert(3,'Target', str(dfcolnmes.columns[4]))\n",
@@ -7983,7 +7983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 23,
    "source": [
     "#NOTE; rename 'Duration Intervals' columns with the behavior name, same as - `'Unnamed: 7':str(dfbeh.columns[3])+'_beh'`\n",
     "\n",
@@ -7996,7 +7996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 24,
    "source": [
     "df = pd.read_excel(wbpath, sheet_name='July', skiprows=[1,2])\n",
     "dfinfo = pd.read_excel(wbpath, sheet_name=0)\n",
@@ -8166,7 +8166,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 385
+     "execution_count": 24
     }
    ],
    "metadata": {}
@@ -8174,11 +8174,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "e134e05457d34029b6460cd73bbf1ed73f339b5b6d98c95be70b69eba114fe95"
+   "hash": "e188947629b0524f73a85c49c67ddb7540fac48e30b4974dd00b7c68849163ff"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8190,7 +8190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
