reformat colors for stacked groups

--- a/test_code.ipynb
+++ b/test_code.ipynb
@@ -8173,7 +8173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -12779,7 +12779,7 @@
           "text": "Disruptive"
          },
          "marker": {
-          "color": "#2B6045",
+          "color": "#00FF08",
           "line": {
            "color": "#333",
            "width": 2
@@ -13533,7 +13533,7 @@
           "text": "Disruptive"
          },
          "marker": {
-          "color": "#5EB88A",
+          "color": "#00ED07",
           "line": {
            "color": "#333",
            "width": 2
@@ -14287,7 +14287,7 @@
           "text": "Disruptive"
          },
          "marker": {
-          "color": "#9ED4B9",
+          "color": "#00D006",
           "line": {
            "color": "#333",
            "width": 2
@@ -15041,7 +15041,7 @@
           "text": "Disruptive"
          },
          "marker": {
-          "color": "#2B6045",
+          "color": "#00AD05",
           "line": {
            "color": "#333",
            "width": 2
@@ -15795,7 +15795,7 @@
           "text": "Disruptive"
          },
          "marker": {
-          "color": "#5EB88A",
+          "color": "#008C04",
           "line": {
            "color": "#333",
            "width": 2
@@ -16549,7 +16549,7 @@
           "text": "Disruptive"
          },
          "marker": {
-          "color": "#9ED4B9",
+          "color": "#006A03",
           "line": {
            "color": "#333",
            "width": 2
@@ -17303,7 +17303,7 @@
           "text": "SIB"
          },
          "marker": {
-          "color": "#F28F1D",
+          "color": "#00D8FF",
           "line": {
            "color": "#333",
            "width": 2
@@ -18057,7 +18057,7 @@
           "text": "SIB"
          },
          "marker": {
-          "color": "#F6C619",
+          "color": "#00BCDE",
           "line": {
            "color": "#333",
            "width": 2
@@ -18811,7 +18811,7 @@
           "text": "SIB"
          },
          "marker": {
-          "color": "#FADD75",
+          "color": "#00A7C6",
           "line": {
            "color": "#333",
            "width": 2
@@ -19565,7 +19565,7 @@
           "text": "SIB"
          },
          "marker": {
-          "color": "#F28F1D",
+          "color": "#0089A3",
           "line": {
            "color": "#333",
            "width": 2
@@ -20319,7 +20319,7 @@
           "text": "SIB"
          },
          "marker": {
-          "color": "#F6C619",
+          "color": "#006D82",
           "line": {
            "color": "#333",
            "width": 2
@@ -21073,7 +21073,7 @@
           "text": "SIB"
          },
          "marker": {
-          "color": "#FADD75",
+          "color": "#005262",
           "line": {
            "color": "#333",
            "width": 2
@@ -22733,28 +22733,28 @@
     "        \"Duration: <5\": \"#6A6E00\",\n",
     "    },\n",
     "    \"Disruptive\" : {\n",
-    "        \"Duration: 0\" : \"#2B6045\",\n",
-    "        \"Duration: 11-15\": \"#5EB88A\",\n",
-    "        \"Duration: 16-20\": \"#9ED4B9\",\n",
-    "        \"Duration: 20+\": \"#2B6045\",\n",
-    "        \"Duration: 6-10\": \"#5EB88A\",\n",
-    "        \"Duration: <5\": \"#9ED4B9\",\n",
+    "        \"Duration: 0\" : \"#00FF08\",\n",
+    "        \"Duration: 11-15\": \"#00ED07\",\n",
+    "        \"Duration: 16-20\": \"#00D006\",\n",
+    "        \"Duration: 20+\": \"#00AD05\",\n",
+    "        \"Duration: 6-10\": \"#008C04\",\n",
+    "        \"Duration: <5\": \"#006A03\",\n",
     "    },\n",
     "    \"SIB\" : {\n",
-    "        \"Duration: 0\" : \"#F28F1D\",\n",
-    "        \"Duration: 11-15\": \"#F6C619\",\n",
-    "        \"Duration: 16-20\": \"#FADD75\",\n",
-    "        \"Duration: 20+\": \"#F28F1D\",\n",
-    "        \"Duration: 6-10\": \"#F6C619\",\n",
-    "        \"Duration: <5\": \"#FADD75\",\n",
+    "        \"Duration: 0\" : \"#00D8FF\",\n",
+    "        \"Duration: 11-15\": \"#00BCDE\",\n",
+    "        \"Duration: 16-20\": \"#00A7C6\",\n",
+    "        \"Duration: 20+\": \"#0089A3\",\n",
+    "        \"Duration: 6-10\": \"#006D82\",\n",
+    "        \"Duration: <5\": \"#005262\",\n",
     "    },\n",
     "    \"Self Mutilation\" : {\n",
-    "        \"Duration: 0\" : \"#2B6045\",\n",
-    "        \"Duration: 11-15\": \"#5EB88A\",\n",
-    "        \"Duration: 16-20\": \"#9ED4B9\",\n",
-    "        \"Duration: 20+\": \"#2B6045\",\n",
-    "        \"Duration: 6-10\": \"#5EB88A\",\n",
-    "        \"Duration: <5\": \"#9ED4B9\",\n",
+    "        \"Duration: 0\" : \"#FF0000\",\n",
+    "        \"Duration: 11-15\": \"#F00202\",\n",
+    "        \"Duration: 16-20\": \"#CA0000\",\n",
+    "        \"Duration: 20+\": \"#AF0000\",\n",
+    "        \"Duration: 6-10\": \"#900000\",\n",
+    "        \"Duration: <5\": \"#6C0000\",\n",
     "    },\n",
     "}\n",
     "\n",
